- re-added MaxPerm setting which was removed by previous commit  - we are still on Java7 and need PermGen setting