@@ -97,6 +97,7 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>${maven-jar-plugin-version}</version>
 				<configuration>
+                    <argLine>-Xmx512m -XX:MaxPermSize=128m</argLine>
 					<classesDirectory>${project.basedir}/../../quickfixj-core/target/classes/</classesDirectory>
 					<includes>
 						<include>*.xml</include>
